# lobitos

./: .gitignore  README.md  airtable_config.py  app.py  data_utils.py  lobitos-backup-20251113.bundle  menu.py  pyproject.toml  requirements.txt  tombola_schema.py  tombola_utils.py  update_header.py  utils.py
.github/: copilot-instructions.md
components/: banner_convites.py
config/: banners.toml
lobitos/: .gitignore  data_utils.py  requirements.txt
lobitos/lobitos/pages/: home.py
lobitos/pages/: home.py
pages/: 1_📦_Pedidos.py  2_📅_Calendario.py  3_👨‍👩‍👧‍👦_Voluntariado.py  4_👦_Escuteiros.py  5_Estatisticas.py  5_💰_ContaCorrente.py  6_🎁_Guarda_Material_Tombola.py  home.py
services/: airtable_service.py
